[package]
name = "chers_cli"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "chers"
path = "src/main.rs"

[dependencies]
chers = { path = "../chers" }
clap = { version = "4.4.13", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
