[package]
name = "chers_server"
version = "0.1.0"
edition = "2021"

[dependencies]
chers = { path = "../chers" }
chers_server_api = { path = "../chers_server_api" }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shuttle-runtime = "0.57.0"
shuttle-axum = "0.57.0"
jiff = "0.2.23"
rand = "0.8"
scc = "3.6.12"
uuid = { version = "1.23.0", features = ["v4", "rng"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "chers_server"
path = "src/main.rs"
